--- a/Landing.html
+++ b/Landing.html
@@ -53,7 +53,7 @@
         <div class="row title container-fluid">
             <div class="col-lg-6">
                 <h1 class="title-head">The Simplest Way To Play A Simple Game!</h1>
-                <button type="button" class="btn btn-xl btn-outline-light btn-title"><i class="fas fa-play fa-2x"></i></button>
+                <a href="WIP.html" type="button" class="btn btn-xl btn-outline-light btn-title"><i class="fas fa-play fa-2x"></i></a>
             </div>
             <div class="col-lg-6">
                 <img  class="title-img" src="./Images/Nnc-xl.png">
