--- a/LTA.html
+++ b/LTA.html
@@ -16,7 +16,7 @@
         rel="stylesheet">
 
     <title>NnC</title>
-    <link rel="icon" href="./Images/favicon.ico">
+    <link rel="icon" href="./Images/favicon1.ico">
 </head>
 
 <body>
@@ -30,7 +30,7 @@
                 <div class="collapse navbar-collapse" id="navbarToggler">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#title">Play</a>
+                            <a class="nav-link" href="./index.html">Play</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./HTP.html">HTP</a>
