--- a/Landing.html
+++ b/Landing.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 
     <title>NnC</title>
-    <link rel="icon" href="./Images/favicon.ico">
+    <link rel="icon" href="./Images/favicon1.ico">
 </head>
 
 <body>
@@ -53,7 +53,7 @@
         <div class="row title container-fluid">
             <div class="col-lg-6">
                 <h1 class="title-head">The Simplest Way To Play A Simple Game!</h1>
-                <a href="WIP.html" type="button" class="btn btn-xl btn-outline-light btn-title"><i class="fas fa-play fa-2x"></i></a>
+                <a href="./index.html" type="button" class="btn btn-xl btn-outline-light btn-title"><i class="fas fa-play fa-2x"></i></a>
             </div>
             <div class="col-lg-6">
                 <img  class="title-img" src="./Images/Nnc-xl.png">
