--- a/HTP.html
+++ b/HTP.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&family=Ubuntu:wght@300&display=swap"rel="stylesheet">
 
     <title>NnC</title>
-    <link rel="icon" href="./Images/favicon.ico">
+    <link rel="icon" href="./Images/favicon1.ico">
 </head>
 
 <body>
@@ -29,7 +29,7 @@
                 <div class="collapse navbar-collapse" id="navbarToggler">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#title">Play</a>
+                            <a class="nav-link" href="./index.html">Play</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./HTP.html">HTP</a>
