--- a/index.html
+++ b/index.html
@@ -3,13 +3,61 @@
 
 <head>
   <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.min.js"></script>
-  
+  <title>NnC/Play</title>
   <meta charset="utf-8" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="stylesheet" href="./css/Play.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <script src="minimax.js"></script>
-  <script src="sketch.js"></script>
+  <section id="nav">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark nav-sty">
+        <div class="container-fluid">
+            <a class="navbar-brand nav-brand-sty" href="./Landing.html">NnC/HTP</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarToggler">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="./HTP.html">HTP</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./LTA.html">LTA</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+  </section>
+  <div class="container">
+    <canvas id="cvs" width="450" height="450"></canvas>
+
+      <div class="options">
+        <h1>NnC</h1>
+        
+        <h2>Play Vs</h2>
+
+        <div class="computer">AI</div>
+        <div class="player">Human</div>
+
+        <h2>Play as</h2>
+
+        <div class="x">X</div>
+        <div class="o">O</div>
+
+        <div class="play">Start</div>
+
+      </div>
+      <div class="gameover hide"></div>
+  </div>
+  <script src="./Javascript/settings.js"></script>
+  <script src="./Javascript/game.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 </body>
 
 </html>
