--- a/Landing.html
+++ b/Landing.html
@@ -22,7 +22,7 @@
     <section id="nav">
         <nav class="navbar navbar-expand-md navbar-dark bg-dark nav-sty">
             <div class="container-fluid">
-                <a class="navbar-brand nav-brand-sty" href="">NnC/Home</a>
+                <a class="navbar-brand nav-brand-sty" href="#">NnC/Home</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -116,7 +116,7 @@
     <section id="footer">
         <div class="info-icons navbar container-fluid">
             <div class="nav-item">
-                <a href="https://github.com/H8rsbeware/NnC" data-toggle="tooltip" data-placement="top" title="Source Code"><i class="far fa-file-code"></i></a>
+                <a href="https://github.com/H8rsbeware/NnC_2.0" data-toggle="tooltip" data-placement="top" title="Source Code"><i class="far fa-file-code"></i></a>
             </div>
             <div class="nav-item">
                 <a href="#" data-toggle="tooltip" data-placement="top" title="Credits"><i class="far fa-address-book"></i></a>
