--- a/Landing.html
+++ b/Landing.html
@@ -119,7 +119,7 @@
                 <a href="https://github.com/H8rsbeware/NnC_2.0" data-toggle="tooltip" data-placement="top" title="Source Code"><i class="far fa-file-code"></i></a>
             </div>
             <div class="nav-item">
-                <a href="#" data-toggle="tooltip" data-placement="top" title="Credits"><i class="far fa-address-book"></i></a>
+                <a href="./Credits.html" data-toggle="tooltip" data-placement="top" title="Credits"><i class="far fa-address-book"></i></a>
             </div>
             <div class="nav-item">
                 <a href="#" data-toggle="tooltip" data-placement="top" title="Documents"><i class="fas fa-book"></i></a>
