--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./css/Play.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap" rel="stylesheet">
+  <link rel="icon" href="./Images/favicon1.ico">
 </head>
 
 <body>
@@ -47,8 +48,9 @@
 
         <div class="x">X</div>
         <div class="o">O</div>
-
+        
         <div class="play">Start</div>
+
 
       </div>
       <div class="gameover hide"></div>
