--- a/HTP.html
+++ b/HTP.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&family=Ubuntu:wght@300&display=swap"rel="stylesheet">
 
-    <title>NnC</title>
+    <title>NnC/HTP</title>
     <link rel="icon" href="./Images/favicon1.ico">
 </head>
 
