--- a/LTA.html
+++ b/LTA.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&family=Ubuntu:wght@300&display=swap"
         rel="stylesheet">
 
-    <title>NnC</title>
+    <title>NnC/LTA</title>
     <link rel="icon" href="./Images/favicon1.ico">
 </head>
 
