--- a/Landing.html
+++ b/Landing.html
@@ -122,7 +122,7 @@
                 <a href="./Credits.html" data-toggle="tooltip" data-placement="top" title="Credits"><i class="far fa-address-book"></i></a>
             </div>
             <div class="nav-item">
-                <a href="#" data-toggle="tooltip" data-placement="top" title="Documents"><i class="fas fa-book"></i></a>
+                <a href="Documentation.txt" data-toggle="tooltip" data-placement="top" title="Documents"><i class="fas fa-book"></i></a>
             </div>
         </div>
         <hr>
