Sound, submission, syntax, and styling update
-Nav items, on the HTP, LTA, and Play screens, spacing increased
-Credits updated to include p5 and bfxr
-Sound effects were added to the game
-Mute button added
-WIP page removed
-Correction to the play page (said NnC/HTP > NnC/Play in the nav bar)
-Documentation updated

--- a/Credits.html
+++ b/Credits.html
@@ -14,6 +14,8 @@
         <li>Google (Fonts): <a href="https://fonts.google.com/">Google fonts</a> : API used for the fonts (Nunito and Ubuntu)</li> 
         <li>Adobe color (Colours): <a href="https://color.adobe.com/create/color-wheel">Adobe Color</a> : Colour selection and palette creator</li>
         <li>VSC (IDE): <a href="https://code.visualstudio.com/">Visual studio code</a> : The development environment and code editor used</li>
+        <li>P5 (Library): <a href="https://p5js.org/">p5.js</a> : The library i used to draw the game in the browser</li>
+        <li>bfxr (Sound effects): <a href="https://www.bfxr.net/">bfxr.net</a> : A sound creator used for all of the sound effects</li>
     </ul>
 </body>
 </html>
