--- a/index.html
+++ b/index.html
@@ -2,21 +2,22 @@
 <html>
 
 <head>
-  <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.min.js"></script> <!--P5.JS is linked to HTML as it changes the canvas class-->
   <title>NnC/Play</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  <link rel="stylesheet" href="./css/Play.css">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap" rel="stylesheet">
-  <link rel="icon" href="./Images/favicon1.ico">
+  <link rel="stylesheet" href="./css/Play.css"> 
+  <link rel="preconnect" href="https://fonts.gstatic.com"> 
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap" rel="stylesheet"> <!--Google fonts-->
+  <link rel="icon" href="./Images/favicon1.ico"> <!--My Favicon-->
+  <script src="https://kit.fontawesome.com/f2aa3b6fbe.js" crossorigin="anonymous"></script> <!--Font awesome-->
 </head>
 
 <body>
   <section id="nav">
     <nav class="navbar navbar-expand-md navbar-dark bg-dark nav-sty">
         <div class="container-fluid">
-            <a class="navbar-brand nav-brand-sty" href="./Landing.html">NnC/HTP</a>
+            <a class="navbar-brand nav-brand-sty" href="./Landing.html">NnC/Play</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -36,23 +37,25 @@
   <div class="container">
     <canvas id="cvs" width="450" height="450"></canvas>
 
+      <audio id="select"><source src="./Sounds/select.wav"></audio>
+      <audio id="start"><source src="./Sounds/Start.wav"></audio>
+      <audio id="error"><source src="./Sounds/Nope.wav"></audio>
+      <audio id="place"><source src="./Sounds/Placement.wav"></audio>
+
       <div class="options">
         <h1>NnC</h1>
-        
         <h2>Play Vs</h2>
-
         <div class="computer">AI</div>
         <div class="player">Human</div>
-
         <h2>Play as</h2>
-
         <div class="x">X</div>
         <div class="o">O</div>
-        
         <div class="play">Start</div>
 
+        <a class="mute"><i class="fas fa-volume-up fa-2x"></i></a>
 
       </div>
+
       <div class="gameover hide"></div>
   </div>
   <script src="./Javascript/settings.js"></script>
